--- a/src/app/food/food.component.html
+++ b/src/app/food/food.component.html
@@ -1,7 +1,21 @@
 <div fxLayout="row" fxLayoutAlign="center center">
-  <mat-button-toggle-group class="course-buttons" name="courses" aria-label="Courses">
-      <mat-button-toggle value="drinks">Drinks</mat-button-toggle>
-      <mat-button-toggle value="savory">Savory</mat-button-toggle>
-      <mat-button-toggle value="desserts">Desserts</mat-button-toggle>
+  <mat-button-toggle-group class="course-buttons" name="courses" aria-label="Courses" [(value)]="selectedValue">
+      <mat-button-toggle (change)="selectionChanged($event)" [value]="drinks">Drinks</mat-button-toggle>
+      <mat-button-toggle (change)="selectionChanged($event)" [value]="savory">Savory</mat-button-toggle>
+      <mat-button-toggle (change)="selectionChanged($event)" [value]="desserts">Desserts</mat-button-toggle>
     </mat-button-toggle-group>
 </div>
+<mat-grid-list cols="4" rowHeight="2:1">
+    <mat-grid-tile [ngClass]="{'selected': savorySelected}">1</mat-grid-tile>
+    <mat-grid-tile [ngClass]="{'selected': dessertsSelected}">2</mat-grid-tile>
+    <mat-grid-tile [ngClass]="{'selected': drinksSelected}">3</mat-grid-tile>
+    <mat-grid-tile [ngClass]="{'selected': dessertsSelected}">4</mat-grid-tile>
+    <mat-grid-tile [ngClass]="{'selected': drinksSelected}">1</mat-grid-tile>
+    <mat-grid-tile [ngClass]="{'selected': dessertsSelected}">2</mat-grid-tile>
+    <mat-grid-tile [ngClass]="{'selected': drinksSelected}">3</mat-grid-tile>
+    <mat-grid-tile [ngClass]="{'selected': savorySelected}">4</mat-grid-tile>
+    <mat-grid-tile [ngClass]="{'selected': drinksSelected}">1</mat-grid-tile>
+    <mat-grid-tile [ngClass]="{'selected': drinksSelected}">2</mat-grid-tile>
+    <mat-grid-tile [ngClass]="{'selected': dessertsSelected}">3</mat-grid-tile>
+    <mat-grid-tile [ngClass]="{'selected': savorySelected}">4</mat-grid-tile>
+  </mat-grid-list>
