--- a/src/app/food/food.component.html
+++ b/src/app/food/food.component.html
@@ -5,17 +5,6 @@
       <mat-button-toggle (change)="selectionChanged($event)" [value]="desserts">Desserts</mat-button-toggle>
     </mat-button-toggle-group>
 </div>
-<mat-grid-list cols="4" rowHeight="2:1">
-    <mat-grid-tile [ngClass]="{'selected': savorySelected}">1</mat-grid-tile>
-    <mat-grid-tile [ngClass]="{'selected': dessertsSelected}">2</mat-grid-tile>
-    <mat-grid-tile [ngClass]="{'selected': drinksSelected}">3</mat-grid-tile>
-    <mat-grid-tile [ngClass]="{'selected': dessertsSelected}">4</mat-grid-tile>
-    <mat-grid-tile [ngClass]="{'selected': drinksSelected}">1</mat-grid-tile>
-    <mat-grid-tile [ngClass]="{'selected': dessertsSelected}">2</mat-grid-tile>
-    <mat-grid-tile [ngClass]="{'selected': drinksSelected}">3</mat-grid-tile>
-    <mat-grid-tile [ngClass]="{'selected': savorySelected}">4</mat-grid-tile>
-    <mat-grid-tile [ngClass]="{'selected': drinksSelected}">1</mat-grid-tile>
-    <mat-grid-tile [ngClass]="{'selected': drinksSelected}">2</mat-grid-tile>
-    <mat-grid-tile [ngClass]="{'selected': dessertsSelected}">3</mat-grid-tile>
-    <mat-grid-tile [ngClass]="{'selected': savorySelected}">4</mat-grid-tile>
+<mat-grid-list cols="4" rowHeight="2:1" *ngFor="let recipe of recipes">
+    <mat-grid-tile (click)="viewRecipe(recipe)" [ngClass]="{'selected': typeSelected(recipe.type)}">1</mat-grid-tile>
   </mat-grid-list>
