--- a/src/app/travel/travel.component.scss
+++ b/src/app/travel/travel.component.scss
@@ -4,6 +4,7 @@
   }
 
    mat-grid-tile {
+     cursor: pointer;
      background-color: white;
      border-radius: 50%;
      border: 1px solid black;
