--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
   Zoey's Blog
 </mat-toolbar>
-<mat-tab-group>
+<mat-tab-group (selectedTabChange)="tabClick($event)">
   <mat-tab label="Travel">
     <ng-template mat-tab-label>
       <mat-icon>airplanemode_active </mat-icon> Travel
