--- a/src/app/food/food.component.html
+++ b/src/app/food/food.component.html
@@ -1,8 +1,8 @@
 <div fxLayout="row" fxLayoutAlign="center center">
   <mat-button-toggle-group class="course-buttons" name="courses" aria-label="Courses" [(value)]="selectedValue">
-      <mat-button-toggle (change)="selectionChanged($event)" [value]="drinks">Drinks</mat-button-toggle>
-      <mat-button-toggle (change)="selectionChanged($event)" [value]="savory">Savory</mat-button-toggle>
-      <mat-button-toggle (change)="selectionChanged($event)" [value]="desserts">Desserts</mat-button-toggle>
+      <mat-button-toggle (change)="selectionChanged($event)" [value]="1">Drinks</mat-button-toggle>
+      <mat-button-toggle (change)="selectionChanged($event)" [value]="2">Savory</mat-button-toggle>
+      <mat-button-toggle (change)="selectionChanged($event)" [value]="3">Desserts</mat-button-toggle>
     </mat-button-toggle-group>
 </div>
 <div class="grid-list-container">
