--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,11 @@
-<mat-toolbar>
-  Zoey's Blog
-</mat-toolbar>
-<mat-tab-group (selectedTabChange)="tabClick($event)">
-  <mat-tab label="Travel">
-    <ng-template mat-tab-label>
-      <mat-icon>airplanemode_active </mat-icon> Travel
-    </ng-template>
-    <app-travel></app-travel>
-  </mat-tab>
+<nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="currentUser">
+    <div class="navbar-nav">
+        <a class="nav-item nav-link" routerLink="/">Home</a>
+        <a class="nav-item nav-link" (click)="logout()">Logout</a>
+    </div>
+</nav>
 
-  <mat-tab label="Food">
-    <ng-template mat-tab-label>
-      <mat-icon>emoji_food_beverage</mat-icon> Food
-    </ng-template>
-    <app-food></app-food>
-  </mat-tab>
-
-  <mat-tab label="Architecture">
-    <ng-template mat-tab-label>
-      <mat-icon>business</mat-icon> Architecture
-    </ng-template>
-    <app-architecture></app-architecture>
-  </mat-tab>
-</mat-tab-group>
+<!-- main app container -->
+<div>
+    <router-outlet></router-outlet>
+</div>
