--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -24,7 +24,7 @@
   </mat-tab>
 </mat-tab-group>
 <!-- tutorial content -->
-<div class="card mt-4">
+<!-- <div class="card mt-4">
     <h4 class="card-header">You're logged in with Angular 8 & JWT!!</h4>
     <div class="card-body">
         <h6>Users from secure api end point</h6>
@@ -33,4 +33,4 @@
             <li *ngFor="let user of users">{{user.firstName}} {{user.lastName}}</li>
         </ul>
     </div>
-</div>
+</div> -->
